[package]
name = "rust_lib_cross_clip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
anyhow = "1.0"
once_cell = "1.16.0"
tokio = { version = "1.40.0", default-features = false, features = ["full"] }
async-trait = "0.1.81"
libp2p = { version = "0.54.1"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = {  version = "0.4.22" ,features = ["max_level_trace","release_max_level_trace","std", "serde"]}
env_logger = "0.11.5"
serde = { version = "1.0.204", features = ["derive"] }
bytemuck = "1.17.0"
serde_json = "1.0.122"
chrono = "0.4.38"
futures = "0.3.30"

